--- a/About.html
+++ b/About.html
@@ -13,6 +13,11 @@
     </style>
   </head>
   <body>
+    <nav>
+      <a href = '#'> Home | </a>
+      <a href = '#'> About | </a>
+      <a href = '#'> Contact | </a>
+    </nav>
     <h1>Everything About Us</h1>
     <p>This is first paragraph.</p>
   </body>
