--- a/About.html
+++ b/About.html
@@ -21,4 +21,7 @@
     <h1>Everything About Us</h1>
     <p>This is first paragraph.</p>
   </body>
+  <footer>
+    Original work by qwchua
+  </footer>
 </html>
